fix gap between sections

--- a/assets/main.css
+++ b/assets/main.css
@@ -158,7 +158,7 @@ p{
 }
 
 .pad{
-    padding-top: 40vh;
+    margin-top: 40vh;
 }
 
 #gh-link{
@@ -436,6 +436,10 @@ li{
         margin-top: 30%;
     }
 
+    .pad{
+        margin-top: 30vh;
+    }
+
 }
 
 @media all and (max-width: 550px){
@@ -457,6 +461,10 @@ li{
         height: 350px;
         border: 1px rgba(177, 177, 177, 0.411) solid;
         text-align: center;
+    }
+
+    .pad{
+        margin-top: 20vh;
     }
     
 }
